fixed button not horizontal align on mobile

--- a/docs/_sass/jekyll-theme-cayman.scss
+++ b/docs/_sass/jekyll-theme-cayman.scss
@@ -90,6 +90,8 @@ a {
 
   @include large {
     padding: 0.75rem 1rem;
+    justify-content: center;
+
   }
 
   @include medium {
